ajout lien deconnexion connexion admin

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,6 @@
  body{
-    background-color: rgb(233, 233, 251); 
+    background-color: rgb(192, 213, 240); 
+    background-image: url("../images/black-linen.png");
 } 
 
 .simg{
